--- a/.github/workflows/updates.yml
+++ b/.github/workflows/updates.yml
@@ -1,13 +1,8 @@
 name: Daily Music Ledger Update
 
 on:
-
-# Runs every day at 07:00 UTC (3am ET / midnight PT)
-
 schedule:
 - cron: “0 7 * * *”
-
-# Manual trigger from the Actions tab
 
 workflow_dispatch:
 inputs:
@@ -22,26 +17,21 @@ update:
 name: Fetch & Rebuild Ledger
 runs-on: ubuntu-latest
 permissions:
-contents: write   # needed to push updated JSON files
+contents: write
 
 ```
 steps:
-  # ── 1. Checkout ─────────────────────────────────────
   - name: Checkout repository
     uses: actions/checkout@v4
     with:
       token: ${{ secrets.GITHUB_TOKEN }}
 
-  # ── 2. Node.js ──────────────────────────────────────
   - name: Set up Node.js 20
     uses: actions/setup-node@v4
     with:
       node-version: "20"
       cache: "npm"
 
-  # ── 3. System deps for Puppeteer/Chromium ───────────
-  #    Puppeteer downloads its own Chromium, but it needs
-  #    these system libraries to run headlessly on Ubuntu.
   - name: Install Chromium system dependencies
     run: |
       sudo apt-get update -qq
@@ -50,19 +40,14 @@ steps:
         libxcomposite1 libxdamage1 libxrandr2 libgbm1 \
         libasound2 libpangocairo-1.0-0 libgtk-3-0
 
-  # ── 4. Install npm deps (includes puppeteer + Chromium) ──
   - name: Install dependencies
     run: npm ci
     env:
-      # Tell puppeteer to download Chromium during npm ci
       PUPPETEER_SKIP_CHROMIUM_DOWNLOAD: "false"
 
-  # ── 5. Run the build script ──────────────────────────
   - name: Run build script
     env:
       NODE_ENV: production
-      # Descriptive User-Agent required by MusicBrainz API policy.
-      # Set this secret in Settings → Secrets → Actions.
       MB_USER_AGENT: ${{ secrets.MB_USER_AGENT }}
     run: |
       if [ "${{ github.event.inputs.dry_run }}" = "true" ]; then
@@ -71,15 +56,12 @@ steps:
         node scripts/build.js
       fi
 
-  # ── 6. Commit & push updated data files ─────────────
   - name: Commit updated data
     if: ${{ github.event.inputs.dry_run != 'true' }}
     run: |
       git config user.name  "github-actions[bot]"
       git config user.email "github-actions[bot]@users.noreply.github.com"
-
       git add data/releases.json data/tally.json
-
       if git diff --cached --quiet; then
         echo "No data changes — nothing to commit."
       else
