--- a/.github/workflows/updates.yml
+++ b/.github/workflows/updates.yml
@@ -3,29 +3,27 @@ name: Daily Music Ledger Update
 on:
 schedule:
 - cron: “0 7 * * *”
-
 workflow_dispatch:
 inputs:
 dry_run:
-description: “Dry run? (no file writes)”
+description: “Dry run - no file writes”
 type: boolean
 required: false
 default: false
 
 jobs:
 update:
-name: Fetch & Rebuild Ledger
+name: Fetch and Rebuild Ledger
 runs-on: ubuntu-latest
 permissions:
 contents: write
+steps:
+- name: Checkout repository
+uses: actions/checkout@v4
+with:
+token: ${{ secrets.GITHUB_TOKEN }}
 
 ```
-steps:
-  - name: Checkout repository
-    uses: actions/checkout@v4
-    with:
-      token: ${{ secrets.GITHUB_TOKEN }}
-
   - name: Set up Node.js 20
     uses: actions/setup-node@v4
     with:
@@ -35,15 +33,10 @@ steps:
   - name: Install Chromium system dependencies
     run: |
       sudo apt-get update -qq
-      sudo apt-get install -y --no-install-recommends \
-        libnss3 libatk-bridge2.0-0 libdrm2 libxkbcommon0 \
-        libxcomposite1 libxdamage1 libxrandr2 libgbm1 \
-        libasound2 libpangocairo-1.0-0 libgtk-3-0
+      sudo apt-get install -y --no-install-recommends libnss3 libatk-bridge2.0-0 libdrm2 libxkbcommon0 libxcomposite1 libxdamage1 libxrandr2 libgbm1 libasound2 libpangocairo-1.0-0 libgtk-3-0
 
   - name: Install dependencies
     run: npm ci
-    env:
-      PUPPETEER_SKIP_CHROMIUM_DOWNLOAD: "false"
 
   - name: Run build script
     env:
@@ -59,15 +52,14 @@ steps:
   - name: Commit updated data
     if: ${{ github.event.inputs.dry_run != 'true' }}
     run: |
-      git config user.name  "github-actions[bot]"
+      git config user.name "github-actions[bot]"
       git config user.email "github-actions[bot]@users.noreply.github.com"
       git add data/releases.json data/tally.json
       if git diff --cached --quiet; then
-        echo "No data changes — nothing to commit."
+        echo "No changes to commit"
       else
         STAMP=$(date -u '+%Y-%m-%d %H:%M UTC')
-        git commit -m "data: daily ledger update — ${STAMP} [skip ci]"
+        git commit -m "data: daily update ${STAMP} [skip ci]"
         git push
-        echo "Pushed updated data files."
       fi
 ```
