--- a/.github/workflows/updates.yml
+++ b/.github/workflows/updates.yml
@@ -20,8 +20,6 @@ contents: write
 steps:
 - name: Checkout repository
 uses: actions/checkout@v4
-with:
-token: ${{ secrets.GITHUB_TOKEN }}
 
 ```
   - name: Set up Node.js 20
@@ -31,9 +29,7 @@ token: ${{ secrets.GITHUB_TOKEN }}
       cache: "npm"
 
   - name: Install Chromium system dependencies
-    run: |
-      sudo apt-get update -qq
-      sudo apt-get install -y --no-install-recommends libnss3 libatk-bridge2.0-0 libdrm2 libxkbcommon0 libxcomposite1 libxdamage1 libxrandr2 libgbm1 libasound2 libpangocairo-1.0-0 libgtk-3-0
+    run: sudo apt-get update -qq && sudo apt-get install -y --no-install-recommends libnss3 libatk-bridge2.0-0 libdrm2 libxkbcommon0 libxcomposite1 libxdamage1 libxrandr2 libgbm1 libasound2 libpangocairo-1.0-0 libgtk-3-0
 
   - name: Install dependencies
     run: npm ci
@@ -42,15 +38,9 @@ token: ${{ secrets.GITHUB_TOKEN }}
     env:
       NODE_ENV: production
       MB_USER_AGENT: ${{ secrets.MB_USER_AGENT }}
-    run: |
-      if [ "${{ github.event.inputs.dry_run }}" = "true" ]; then
-        node scripts/build.js --dry-run
-      else
-        node scripts/build.js
-      fi
+    run: node scripts/build.js
 
   - name: Commit updated data
-    if: ${{ github.event.inputs.dry_run != 'true' }}
     run: |
       git config user.name "github-actions[bot]"
       git config user.email "github-actions[bot]@users.noreply.github.com"
@@ -58,8 +48,7 @@ token: ${{ secrets.GITHUB_TOKEN }}
       if git diff --cached --quiet; then
         echo "No changes to commit"
       else
-        STAMP=$(date -u '+%Y-%m-%d %H:%M UTC')
-        git commit -m "data: daily update ${STAMP} [skip ci]"
+        git commit -m "data: daily update [skip ci]"
         git push
       fi
 ```
