--- a/.github/workflows/updates.yml
+++ b/.github/workflows/updates.yml
@@ -4,51 +4,36 @@ on:
 schedule:
 - cron: “0 7 * * *”
 workflow_dispatch:
-inputs:
-dry_run:
-description: “Dry run - no file writes”
-type: boolean
-required: false
-default: false
 
 jobs:
 update:
-name: Fetch and Rebuild Ledger
 runs-on: ubuntu-latest
 permissions:
 contents: write
 steps:
-- name: Checkout repository
-uses: actions/checkout@v4
+- uses: actions/checkout@v4
 
 ```
-  - name: Set up Node.js 20
-    uses: actions/setup-node@v4
+  - uses: actions/setup-node@v4
     with:
       node-version: "20"
       cache: "npm"
 
-  - name: Install Chromium system dependencies
-    run: sudo apt-get update -qq && sudo apt-get install -y --no-install-recommends libnss3 libatk-bridge2.0-0 libdrm2 libxkbcommon0 libxcomposite1 libxdamage1 libxrandr2 libgbm1 libasound2 libpangocairo-1.0-0 libgtk-3-0
+  - name: Install system deps
+    run: sudo apt-get update -qq && sudo apt-get install -y libnss3 libatk-bridge2.0-0 libdrm2 libxkbcommon0 libxcomposite1 libxdamage1 libxrandr2 libgbm1 libasound2 libpangocairo-1.0-0 libgtk-3-0
 
-  - name: Install dependencies
+  - name: Install npm deps
     run: npm ci
 
-  - name: Run build script
-    env:
-      NODE_ENV: production
-      MB_USER_AGENT: ${{ secrets.MB_USER_AGENT }}
+  - name: Build
     run: node scripts/build.js
+    env:
+      MB_USER_AGENT: ${{ secrets.MB_USER_AGENT }}
 
-  - name: Commit updated data
+  - name: Commit data
     run: |
       git config user.name "github-actions[bot]"
       git config user.email "github-actions[bot]@users.noreply.github.com"
       git add data/releases.json data/tally.json
-      if git diff --cached --quiet; then
-        echo "No changes to commit"
-      else
-        git commit -m "data: daily update [skip ci]"
-        git push
-      fi
+      git diff --cached --quiet || git commit -m "data: daily update [skip ci]" && git push
 ```
