--- a/.github/workflows/updates.yml
+++ b/.github/workflows/updates.yml
@@ -15,11 +15,10 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: '20'
-          cache: npm
       - name: Install system deps
         run: sudo apt-get update -qq && sudo apt-get install -y libnss3 libatk-bridge2.0-0 libdrm2 libxkbcommon0 libxcomposite1 libxdamage1 libxrandr2 libgbm1 libasound2 libpangocairo-1.0-0 libgtk-3-0
       - name: Install npm deps
-        run: npm ci
+        run: npm install
       - name: Build
         run: node scripts/build.js
         env:
