--- a/.github/workflows/updates.yml
+++ b/.github/workflows/updates.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           node-version: '20'
       - name: Install system deps
-        run: sudo apt-get update -qq && sudo apt-get install -y libnss3 libatk-bridge2.0-0 libdrm2 libxkbcommon0 libxcomposite1 libxdamage1 libxrandr2 libgbm1 libasound2 libpangocairo-1.0-0 libgtk-3-0
+        run: sudo apt-get update -qq && sudo apt-get install -y libnss3 libatk-bridge2.0-0 libdrm2 libxkbcommon0 libxcomposite1 libxdamage1 libxrandr2 libgbm1 libasound2t64 libpangocairo-1.0-0 libgtk-3-0 libx11-xcb1 libxcb-dri3-0
       - name: Install npm deps
         run: npm install
       - name: Build
