--- a/package.json
+++ b/package.json
@@ -3,12 +3,11 @@
   "version": "1.0.0",
   "description": "Daily auto-updating public ledger of new Canadian music releases",
   "scripts": {
-    "build":    "node scripts/build.js",
-    "dry-run":  "node scripts/build.js --dry-run"
+    "build": "node scripts/build.js"
   },
   "dependencies": {
-    "axios":     "^1.6.7",
-    "puppeteer": "^21.11.0"
+    "axios": "^1.6.7",
+    "cheerio": "^1.0.0"
   },
   "engines": {
     "node": ">=18.0.0"
